fix cursor out of place

--- a/style.css
+++ b/style.css
@@ -49,12 +49,8 @@ h1 {
 }
 #canvas {
   cursor: crosshair;
-  border: 10px solid silver;
   -moz-box-shadow: 0 0 5px #888;
   -webkit-box-shadow: 0 0 5px #888;
   box-shadow: 0 0 5px #888;
   background: white;
-}
-*:active {
-  cursor: crosshair;
 }
